Sahdow Added to the logo

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
             /* Adjust the width as needed */
             animation: rotate 7s linear infinite;
             /* Adjust the duration as needed */
+            box-shadow: 2px 2px 30px 7px #1B9CCB;
+            border-radius: 50%;
         }
 
         .center-logo {
