--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
             height: auto;
         }
 
+        .feature-icon img{
+            width: 50%;
+            height: auto;
+        }
+
         @keyframes rotate {
             0% {
                 transform: rotate(0deg);
@@ -135,7 +140,7 @@
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-                                        <img src="dist/images/feature-icon-01.svg" alt="Feature 01">
+                                        <img src="dist/images/solution.png" alt="Feature 01">
                                     </div>
                                     <h4 class="feature-title mt-24">Innovative Solutions</h4>
                                     <p class="text-sm mb-0">Explore cutting-edge technologies and innovative solutions
@@ -148,7 +153,7 @@
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-                                        <img src="dist/images/feature-icon-02.svg" alt="Feature 02">
+                                        <img src="dist/images/productivity.png" alt="Feature 02">
                                     </div>
                                     <h4 class="feature-title mt-24">Efficient Development</h4>
                                     <p class="text-sm mb-0">At Exprosoft, we focus on efficient development processes.
@@ -161,7 +166,7 @@
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-                                        <img src="dist/images/feature-icon-03.svg" alt="Feature 03">
+                                        <img src="dist/images/planning.png" alt="Feature 03">
                                     </div>
                                     <h4 class="feature-title mt-24">Strategic Planning</h4>
                                     <p class="text-sm mb-0">Benefit from our strategic planning expertise. Exprosoft
@@ -174,7 +179,7 @@
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-                                        <img src="dist/images/feature-icon-04.svg" alt="Feature 04">
+                                        <img src="dist/images/tariff.png" alt="Feature 04">
                                     </div>
                                     <h4 class="feature-title mt-24">Scalable Solutions</h4>
                                     <p class="text-sm mb-0">Our solutions are designed to scale with your business.
@@ -187,7 +192,7 @@
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-                                        <img src="dist/images/feature-icon-05.svg" alt="Feature 05">
+                                        <img src="dist/images/best-employee.png" alt="Feature 05">
                                     </div>
                                     <h4 class="feature-title mt-24">User-Centric Design</h4>
                                     <p class="text-sm mb-0">Experience user-centric design with Exprosoft. Our UI/UX
@@ -200,7 +205,7 @@
                             <div class="feature text-center is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-                                        <img src="dist/images/feature-icon-06.svg" alt="Feature 06">
+                                        <img src="dist/images/user.png" alt="Feature 06">
                                     </div>
                                     <h4 class="feature-title mt-24">Reliable Support</h4>
                                     <p class="text-sm mb-0">Count on Exprosoft for reliable support. Our dedicated
